# perfect-python-starter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
your_package_name/: module_b.py
