[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = "This is a python project project starter"
authors = ["JimZer <jimi.vaubien@protonmail.com>"]
# Here you define your package. Change "your_package_name" for the real name
# of your package and do the same for the folder "your_package_name"
packages = [
    { include = "your_package_name" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
mypy = "^0.910"
flake8-mypy = "^17.8.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Configuration for tool compatible with pyproject.toml
[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = 'your_package_name'
